# hallmark

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  HOSTING.md  README.md  croissant.json  pyproject.toml
.github/workflows/: baselines.yml  pages.yml  tests.yml  update-dataset.yml
citebench/: __init__.py  cli.py
citebench/baselines/: __init__.py  bibtexupdater.py  doi_only.py  ensemble.py  llm_verifier.py
citebench/contribution/: __init__.py  pool_manager.py  validate_entry.py
citebench/dataset/: __init__.py  generator.py  loader.py  schema.py  scraper.py
citebench/evaluation/: __init__.py  metrics.py  subtests.py  temporal.py
data/: Neurips Hallucinations For Public - Main results.csv
data/raw/: hallucinated_entries.jsonl  valid_entries.jsonl
data/v1.0/: biorxiv_withdrawn_incidents.jsonl  dev_public.jsonl  dev_public_blind.jsonl  gptzero_neurips2025.jsonl  journal_articles.jsonl  llm_generated.jsonl  llm_generated_deepseek_r1.jsonl  llm_generated_deepseek_v3.jsonl  llm_generated_gemini_flash.jsonl  llm_generated_qwen.jsonl  llm_openai.jsonl  metadata.json  raw_crossdomain_valid.jsonl  raw_temporal_valid.jsonl  real_world_incidents.jsonl  source_mapping.json  stress_test.jsonl  stress_test_blind.jsonl  supplement_chatgpt_citations.jsonl  test_crossdomain.jsonl  test_public.jsonl  test_public_blind.jsonl  test_temporal_2024_2025.jsonl  valid_entry_verification.json
data/v1.1_crossdomain_matched/: raw_crossdomain_matched_canonical_valid.jsonl  raw_crossdomain_matched_valid.jsonl  (+1 more)
docs/: MISLABEL_AUDIT.md  bibliographic_convention_split_plan.md  v1.1_expansion_brainstorm.md  walters_wilder_supplement.md
examples/: 01_basic_evaluation.py  02_per_type_analysis.py  03_custom_baseline.py  04_temporal_analysis.py  05_contribute_entries.py
figures/: cutoff_aware_results.json  cutoff_aware_results.tex  figure1.tex  figure1_spec.md  gpt54_probe_results.json
hallmark/: __init__.py  cli.py
hf/: README.md
notes/: hardt-benchmark-science-hallmark.md  hardt-shortcomings-plan.md
paper/: .gitignore  .latexmkrc  Makefile  appendix.tex  checklist.tex  figures  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  neurips_2025_template.tex  neurips_2026.sty  references.bib
results/: bibtexupdater_dev.json  bibtexupdater_dev_public.json  doi_only_dev.json  doi_only_dev_public.json  ensemble_dev.json  ensemble_dev_public.json  history.jsonl  results_matrix_dev_public.csv  rule_based_dev.json  temporal_probe_deepseek_r1.json  temporal_probe_deepseek_v3.json  temporal_probe_gemini_flash.json  temporal_probe_mistral.json  temporal_probe_openai.json  temporal_probe_qwen.json  temporal_probe_set.jsonl  temporal_probe_tool_augmented.json
scripts/: a5_build_substrate.py  a5_compute_kappa.py  a5_export_human_kit.py  a5_run_raters.py  aggregate_crossdomain_llms.py  aggregate_test_public_breakdowns.py  analyze_by_generation_method.py  analyze_domain_recency_2x2.py  analyze_gpt54_probe.py  analyze_llm_baselines.py  analyze_llm_filtering_bias.py  analyze_seed_sensitivity.py  analyze_shortcuts.py  analyze_synthetic_vs_real.py  analyze_walters_wilder.py  apply_data_fixes.py  audit_format_tells.py  build_crossdomain_split.py  build_dataset.py  check_llm_in_splits.py  check_mislabeled_entries.py  check_results_freshness.py  collect_real_world_citations.py  compute_baseline_costs.py  compute_bootstrap_ci.py  compute_codesign_bound.py  compute_pairwise_kappa.py  create_splits.py  cross_verify_valid_entries.py  debug_mislabeled.py  deduplicate_bibtex_keys.py  emit_cutoff_aware_appendix.py  enrich_valid_dois.py  evaluate_crossdomain_llms.py  evaluate_temporal_supplement.py  fix_cross_db_agreement.py  fix_data_quality.py  fix_fields_complete.py  fix_plausible_fabrication.py  fix_stale_explanations.py  (+51 more)
site/: README.md  index.html
tables/: baseline_cost_latency.csv  codesign_bound.csv  cross_split_per_tier.csv  cross_split_per_tier.tex  format_tells_audit.csv  smoke_test_per_type.csv  smoke_test_per_type.tex  smoke_test_thinking_budget.csv  smoke_test_thinking_budget.tex
tests/: test_aggregator.py  test_baselines.py  test_bibtexupdater.py  test_bootstrap_ci_plumbing.py  test_cache.py  test_cascade.py  test_cascade_integration.py  test_checkifexist.py  test_cli.py  test_crossdomain_clients.py  test_data_integrity.py  test_degenerate.py  test_evaluate_integration.py  test_factor_analysis.py  test_generator.py  test_hallucitechecker.py  test_http_cache.py  test_llm_agentic.py  test_llm_tool_augmented.py  test_llm_verifier.py  test_loader.py  test_metrics.py  test_metrics_extensions.py  test_power.py  test_prescreening.py  test_ranking.py  test_ranking_stability.py  test_relabel_ground_truth.py  test_results_freshness.py  test_reuse_tracker.py  test_sanitize.py  test_scan_canary_emission.py  test_schema.py  test_subtests.py  test_temporal.py  test_title_oracle.py  test_type_metrics.py  test_update_rolling.py  test_validate.py  test_verify_subtests.py  (+1 more)
(+538 files in other folders)
